# OpenAIProxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: docker-publish.yml
.zcode/plans/: plan-sess_633fb877-ec0a-496e-8537-df6c73b4e7e1.md  plan-sess_e882030e-fa5b-4205-831f-3a32010bb027.md
openproxy/: auto_free_models.py  config.py  database.py  main.py  models.py  schemas.py
openproxy/api/: admin.py  chat.py  embeddings.py  models.py
openproxy/router/: error_classifier.py  model_contexts.py  provider_manager.py  proxy.py
openproxy/utils/: auth.py  encryption.py  logging_config.py  settings_helper.py  streaming.py
openproxy/web/: routes.py
openproxy/web/static/: app.js
openproxy/web/templates/: base.html  index.html  login.html  logs.html  providers.html  sets.html  settings.html
